--- a/app/src/main/res/layout/activity_add_new_child.xml
+++ b/app/src/main/res/layout/activity_add_new_child.xml
@@ -207,6 +207,26 @@
                 android:layout_marginBottom="15dp"
                 />
 
+                <Button
+                    android:id="@+id/change_mode"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:text="@string/child_already_registered"
+                    android:textColor="@color/textSecondColor"
+                    android:onClick="attemptAddingExisted"
+                    app:autoSizeTextType="uniform"
+                    android:textAllCaps="false"
+                    android:fontFamily="sans-serif-condensed-light"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginEnd="60dp"
+                    android:gravity="center"
+                    android:layout_marginBottom="15dp"
+                    android:background="@drawable/button_background"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:paddingStart="15dp"
+                    android:paddingEnd="15dp"
+                    />
+
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
