--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,8 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:indeterminateTint="@color/colorAccent"/>
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -37,9 +38,7 @@
         app:layout_constraintGuide_percent="0.91" />
 
     <androidx.cardview.widget.CardView
-
         android:id="@+id/login_form"
-
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
